<resources>
    <string name="app_name">H2gO</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Authentication failed</string>
    <string name="error_field_required">This field is required</string>

    <string name="loggingIn">Logging in…</string>
    <string name="loggingOut">Logging out…</string>

    <string name="sharedPrefName">MySharedPreferencesName</string>
    <string name="title_activity_app_screen">AppScreen</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="apiHttpPath">http://www.gitinitdone.site</string>

    <string name="edit_screen">Edit User Profile</string>
    <string name="register_screen">Register New User</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="action_settings">settings</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="submit_report">Submit a Report</string>
    <string name="water_locations">Water Locations</string>
    <string name="history">History</string>

    <string name="submit_source_report">Submit a Water Source Report</string>
    <string name="submit_purity_report">Submit a Water Purity Report</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_source_report_list">SourceReportListActivity</string>
    <string name="title_activity_map_view">Map</string>
    <string name="title_activity_submit_purity_report">SubmitPurityReportActivity</string>
    <string name="title_activity_history_graph">HistoryGraphActivity</string>
    <string name="graph_permission_toast">Only managers can view history graphs</string>
    <string name="purity_permission_toast">General users and workers cannot access purity reports.
    </string>
    <string name="login_message">"You are logged in as: "</string>
    <string name="purity_submit_permission_toast">General users cannot submit a purity report.
    </string>
    <string name="first_name_validation">First name is too short.</string>
    <string name="last_name_validation">Last name is too short.</string>
    <string name="email_validation">Email is not valid.</string>
    <string name="address_validation">Address is too short.</string>
    <string name="city_validation">City is too short.</string>
    <string name="state_validation">State / Zip Code is too short.</string>
    <string name="edit_profile_toast">User profile has been saved.</string>
    <string name="edit_profile_error_toast">There was an error during editing.</string>
    <string name="Latitude_validation">Latitude can\'t be empty</string>
    <string name="Latitude_range_validation">Latitude must be in between -90 and 90 degrees</string>
    <string name="Latitude_number_validation">Latitude is not a valid number.</string>
    <string name="Longitude_validation">Longitude can\'t be empty</string>
    <string name="Longitude_range_validation">Longitude must be in between -180 and 180 degrees
    </string>
    <string name="Longitude_number_validation">Longitude is not a valid number.</string>
    <string name="year_validation">Year can\'t be empty</string>
    <string name="year_upper_bound">"Year cannot be greater than "</string>
    <string name="year_lower_bound">"Year cannot be less than "</string>
    <string name="year_number_validation">Year is not a valid number.</string>
    <string name="empty_purity_report_toast">No purity reports are in the system.</string>
    <string name="login_success">You have successfully logged in.</string>
    <string name="empty_reports_toast">No reports are in the system.</string>
    <string name="username_validation">Username is too short.</string>
    <string name="password_validation">Password is too short.</string>
    <string name="register_success">User has been registered. Please log in.</string>
    <string name="register_duplicate">That username is already taken.</string>
    <string name="register_error">There was an error during registration.</string>
    <string name="purity_report_success">Purity Report has been successfully submitted.</string>
    <string name="purity_report_error">There was an error during submission.</string>
    <string name="soure_report_success">Source Report has been successfully submitted.</string>
    <string name="source_report_error">There was an error during submission.</string>
    <string name="edit_user_profile">Edit User Profile:</string>
    <string name="title">Title:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="city">City</string>
    <string name="state_zip">State, Zip</string>
    <string name="user_account_type">User Account Type:</string>
    <string name="fixed_user_fields">These fields cannot be changed:</string>
    <string name="username_cannot_be_changed">Username (fixed):</string>
    <string name="usertype_cannot_be_changed">User Type (fixed):</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="view_history_graphs">View History Graphs</string>
    <string name="location_positive_negative">Location (Positive/Negative):</string>
    <string name="latitude_north_south">Latitude (North/South):</string>
    <string name="longitude_east_west">Longitude (East/West):</string>
    <string name="data_type_to_plot_select_one">Data Type to Plot (Select one):</string>
    <string name="virus">Virus</string>
    <string name="contaminant">Contaminant</string>
    <string name="year">Year</string>
    <string name="view_graph">View graph</string>
    <string name="purity_graph">Purity Graph</string>
    <string name="list_of_purity_reports">List of Purity Reports</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="type_of_user">Type of User:</string>
    <string name="list_of_source_reports">List of Source Reports</string>
    <string name="water_condition">Water Condition</string>
    <string name="virus_ppm">Virus PPM:</string>
    <string name="contaminant_ppm">Contaminant PPM:</string>
    <string name="submit">Submit</string>
    <string name="water_type">Water Type</string>
    <string name="h2go_actions">H2gO Actions</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="these_cannot_be_changed_by_you">These cannot be changed by you:</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="resetPasswordSuccess">Please check your email to reset your password.</string>
    <string name="resetPasswordFailure">That username does not exist in our system</string>
    <string name="use_current_location">Use Current Location</string>
</resources>
